set num_of_participants as sortkey for live_participants