@@ -3,12 +3,17 @@ package com.example.services;
 import com.example.configurations.DynamodbConfiguration;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.springframework.stereotype.Service;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
+import software.amazon.awssdk.services.dynamodb.model.DeleteItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.DynamoDbException;
 import software.amazon.awssdk.services.dynamodb.model.GetItemRequest;
 import software.amazon.awssdk.services.dynamodb.model.PutItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.QueryRequest;
+import software.amazon.awssdk.services.dynamodb.model.QueryResponse;
 import software.amazon.awssdk.services.dynamodb.model.UpdateItemRequest;
 
 @Service
@@ -24,89 +29,93 @@ public class DynamodbService {
         this.liveParticipantsTable = dynamodbConfiguration.liveParticipantsTable();
     }
 
-    // update participant's state
-    public void updateParticipantState(String activityUuid, String userUuid, String newState) {
-        Map<String, AttributeValue> key = new HashMap<>();
-        key.put("activity_uuid", AttributeValue.builder().s(activityUuid).build());
-        key.put("user_uuid", AttributeValue.builder().s(userUuid).build());
-
-        // Create the update item request
-        UpdateItemRequest request =
-                UpdateItemRequest.builder()
-                        .tableName(participantsStateTable)
-                        .key(key)
-                        .updateExpression("SET participant_state = :val")
-                        .expressionAttributeValues(
-                                Collections.singletonMap(
-                                        ":val", AttributeValue.builder().s(newState).build()))
-                        .build();
-
-        dynamodbClient.updateItem(request);
+    public void incrementLiveParticipants(String activityUuid) {
+        int currentLiveParticipants = getLiveParticipants(activityUuid);
+        deleteLiveParticipants(activityUuid, currentLiveParticipants);
+        updateLiveParticipants(activityUuid, ++currentLiveParticipants);
     }
 
-    public void incrementLiveParticipants(String activityId) {
-        int currentLiveParticipants = getLiveParticipants(activityId);
-        int newLiveParticipants = currentLiveParticipants + 1;
-        UpdateItemRequest updateItemRequest =
-                UpdateItemRequest.builder()
-                        .tableName(liveParticipantsTable)
-                        .key(
-                                Collections.singletonMap(
-                                        "activity_uuid",
-                                        AttributeValue.builder().s(activityId).build()))
-                        .updateExpression("SET number_of_participants = :val")
-                        .expressionAttributeValues(
-                                Collections.singletonMap(
-                                        ":val",
-                                        AttributeValue.builder()
-                                                .n(String.valueOf(newLiveParticipants))
-                                                .build()))
-                        .build();
-        dynamodbClient.updateItem(updateItemRequest);
+    public void decrementLiveParticipants(String activityUuid) {
+        int currentLiveParticipants = getLiveParticipants(activityUuid);
+        deleteLiveParticipants(activityUuid, currentLiveParticipants);
+        updateLiveParticipants(activityUuid, --currentLiveParticipants);
     }
 
-    public void decrementLiveParticipants(String activityId) {
-        int currentLiveParticipants = getLiveParticipants(activityId);
-        int newLiveParticipants = currentLiveParticipants - 1;
-        UpdateItemRequest updateItemRequest =
-                UpdateItemRequest.builder()
-                        .tableName(liveParticipantsTable)
+    private void deleteLiveParticipants(String activityUuid, int currentLiveParticipants) {
+        DeleteItemRequest deleteRequest =
+                DeleteItemRequest.builder()
+                        .tableName("live_participants_table")
                         .key(
-                                Collections.singletonMap(
+                                Map.of(
                                         "activity_uuid",
-                                        AttributeValue.builder().s(activityId).build()))
-                        .updateExpression("SET number_of_participants = :val")
-                        .expressionAttributeValues(
-                                Collections.singletonMap(
-                                        ":val",
+                                        AttributeValue.builder().s(activityUuid).build(),
+                                        "number_of_participants",
                                         AttributeValue.builder()
-                                                .n(String.valueOf(newLiveParticipants))
+                                                .n(Integer.toString(currentLiveParticipants))
                                                 .build()))
                         .build();
-        dynamodbClient.updateItem(updateItemRequest);
+
+        try {
+            dynamodbClient.deleteItem(deleteRequest);
+        } catch (DynamoDbException e) {
+            System.err.println(e.getMessage());
+        }
+    }
+
+    private void updateLiveParticipants(String activityUuid, int currentLiveParticipants) {
+        PutItemRequest putRequest =
+                PutItemRequest.builder()
+                        .tableName("live_participants_table")
+                        .item(
+                                Map.of(
+                                        "activity_uuid",
+                                        AttributeValue.builder().s(activityUuid).build(),
+                                        "number_of_participants",
+                                        AttributeValue.builder()
+                                                .n(Integer.toString(currentLiveParticipants))
+                                                .build()))
+                        .build();
+
+        try {
+            dynamodbClient.putItem(putRequest);
+        } catch (DynamoDbException e) {
+            System.err.println(e.getMessage());
+        }
     }
 
     // add participant's state
-    public void addParticipantState(String activityUuid, String userId, String state) {
-        Map<String, AttributeValue> item = new HashMap<>();
-        item.put("activity_uuid", AttributeValue.builder().s(activityUuid).build());
-        item.put("user_uuid", AttributeValue.builder().s(userId).build());
-        item.put("participant_state", AttributeValue.builder().s(state).build());
+    public void addParticipantState(String activityUuid, String userUuid, String state) {
         PutItemRequest request =
-                PutItemRequest.builder().tableName(participantsStateTable).item(item).build();
+                PutItemRequest.builder()
+                        .tableName(participantsStateTable)
+                        .item(
+                                Map.of(
+                                        "activity_uuid",
+                                        AttributeValue.builder().s(activityUuid).build(),
+                                        "user_uuid",
+                                        AttributeValue.builder().s(userUuid).build(),
+                                        "participant_state",
+                                        AttributeValue.builder().s(state).build()))
+                        .build();
 
-        dynamodbClient.putItem(request);
+        try {
+            dynamodbClient.putItem(request);
+        } catch (DynamoDbException e) {
+            System.err.println(e.getMessage());
+        }
     }
 
     // get participant's state before checkin or checkout
     public String getParticipantState(String activityUuid, String userId) {
-        Map<String, AttributeValue> key = new HashMap<>();
-        key.put("activity_uuid", AttributeValue.builder().s(activityUuid).build());
-        key.put("user_uuid", AttributeValue.builder().s(userId).build());
         GetItemRequest request =
                 GetItemRequest.builder()
                         .tableName(participantsStateTable)
-                        .key(key)
+                        .key(
+                                Map.of(
+                                        "activity_uuid",
+                                        AttributeValue.builder().s(activityUuid).build(),
+                                        "user_uuid",
+                                        AttributeValue.builder().s(userId).build()))
                         .projectionExpression("participant_state")
                         .build();
 
@@ -118,24 +127,52 @@ public class DynamodbService {
     }
 
     public int getLiveParticipants(String activityUuid) {
-        GetItemRequest request =
-                GetItemRequest.builder()
-                        .tableName(liveParticipantsTable)
-                        .key(
-                                Collections.singletonMap(
-                                        "activity_uuid",
+        QueryRequest queryRequest =
+                QueryRequest.builder()
+                        .tableName("live_participants_table")
+                        .keyConditionExpression("activity_uuid = :activity_uuid")
+                        .expressionAttributeValues(
+                                Map.of(
+                                        ":activity_uuid",
                                         AttributeValue.builder().s(activityUuid).build()))
-                        .projectionExpression("number_of_participants")
+                        .scanIndexForward(false) // in descending order
+                        .limit(1)
                         .build();
 
-        Map<String, AttributeValue> result = dynamodbClient.getItem(request).item();
-        if (result == null || !result.containsKey("number_of_participants")) {
+        try {
+            QueryResponse response = dynamodbClient.query(queryRequest);
+            List<Map<String, AttributeValue>> items = response.items();
+            if (!items.isEmpty() && items.get(0).containsKey("number_of_participants")) {
+                // System.out.println(items.get(0).get("number_of_participants").n());
+                return Integer.parseInt(items.get(0).get("number_of_participants").n());
+            } else {
+                return 0;
+            }
+        } catch (DynamoDbException e) {
+            System.err.println(e.getMessage());
             return 0;
         }
+    }
 
-        // return Integer.parseInt(result.get("number_of_participants").n());
-        return result.get("number_of_participants").n() == null
-                ? Integer.parseInt(result.get("number_of_participants").s())
-                : Integer.parseInt(result.get("number_of_participants").n());
+    // update participant's state
+    public void updateParticipantState(String activityUuid, String userUuid, String newState) {
+        Map<String, AttributeValue> key = new HashMap<>();
+        key.put("activity_uuid", AttributeValue.builder().s(activityUuid).build());
+        key.put("user_uuid", AttributeValue.builder().s(userUuid).build());
+
+        UpdateItemRequest request =
+                UpdateItemRequest.builder()
+                        .tableName(participantsStateTable)
+                        .key(key)
+                        .updateExpression("SET participant_state = :val")
+                        .expressionAttributeValues(
+                                Collections.singletonMap(
+                                        ":val", AttributeValue.builder().s(newState).build()))
+                        .build();
+        try {
+            dynamodbClient.updateItem(request);
+        } catch (DynamoDbException e) {
+            System.err.println(e.getMessage());
+        }
     }
 }
